@@ -14,6 +14,8 @@
     ADDED: action: view > Save settings as default (for new instances of this view type)
     ADDED: option: Panel > View > Locale aware sorting
 
+    CHANGED: Use KrView for displaying search results,
+             which is much faster than the previously used QTreeWidget.
     CHANGED: Removed default shortcuts for the Left/Right Bookmarks actions,
              as they conflict with the Back/Forward actions.
     CHANGED: After failed refresh, only focus location bar if the url was entered manually.
